-- @+leo-ver=4-thin
-- @+node:gcross.20101015124156.1547:@thin Blueprint.cabal
-- @@language Haskell
Name:                Blueprint
Version:             1.0
License:             BSD3
License-file:        LICENSE
Author:              Gregory Crosswhite
Maintainer:          Gregory Crosswhite <gcross@phys.washington.edu>
Stability:           Unstable
Synopsis:            Blueprint
Description:         Blueprint
Cabal-version:       >=1.2.3
Build-type:          Simple
Category:            Type System,Data

Library
    Build-depends:   base >= 3 && < 5
    Exposed-modules:
        Blueprint.Cache
        Blueprint.Configuration
        Blueprint.Identifier
        Blueprint.Job
        Blueprint.Main
        Blueprint.Miscellaneous
        Blueprint.Options
        Blueprint.Tools
        Blueprint.Tools.Ar
        Blueprint.Tools.GHC
    Extensions:      EmptyDataDecls
-- @-node:gcross.20101015124156.1547:@thin Blueprint.cabal
-- @-leo
