-- @+leo-ver=4-thin
-- @+node:gcross.20101015124156.1547:@thin Blueprint.cabal
-- @@language Haskell
Name:                Blueprint
Version:             1.0
License:             BSD3
License-file:        LICENSE
Author:              Gregory Crosswhite
Maintainer:          Gregory Crosswhite <gcross@phys.washington.edu>
Stability:           Unstable
Synopsis:            Blueprint
Description:         Blueprint
Cabal-version:       >=1.8
Build-type:          Simple
Category:            Type System,Data

Flag Test
    Description: Enable testing
    Default:     False

Library
    Build-depends:
        AbortT-transformers == 1.0.*,
        Cabal == 1.8.*,
        ConfigFile == 1.0.*,
        GotoT-transformers == 1.0.*,
        array == 0.3.*,
        base >= 4 && < 4.3,
        binary == 0.5.*,
        bytestring == 0.9.*,
        containers == 0.3.*,
        crypto-api == 0.1.*,
        derive == 2.3.*,
        directory == 1.0.*,
        either-unwrap == 1.1.*,
        filepath == 1.1.*,
        hslogger == 1.0.*,
        ivar-simple == 0.1.*,
        monad-loops == 0.3.*,
        pretty == 1.0.*,
        process == 1.0.*,
        pureMD5 == 2.1.*,
        regex-base >= 0.93.2 && < 0.93.3,
        regex-pcre-builtin >= 0.94.2 && < 0.94.3,
        split == 0.1.*,
        tagged-list == 1.1.*,
        template-haskell == 2.4.*,
        transformers == 0.2.*,
        type-level-natural-number == 1.1.*,
        type-level-natural-number-induction == 1.0.*,
        utf8-string == 0.3.*,
        uuid == 1.2.*
    Exposed-modules:
        Blueprint.Cache
        Blueprint.Configuration
        Blueprint.Identifier
        Blueprint.Job
        Blueprint.Main
        Blueprint.Miscellaneous
        Blueprint.Options
        Blueprint.Tools
        Blueprint.Tools.Ar
        Blueprint.Tools.GHC
    Extensions:      EmptyDataDecls

Executable test
    if flag(test)
        Buildable: True
    else
        Buildable: False
    Build-depends:
        HUnit == 1.2.*,
        QuickCheck == 2.1.*,
        test-framework == 0.3.*,
        test-framework-hunit == 0.2.*,
        test-framework-quickcheck2 == 0.2.*
    Main-is: test
-- @nonl
-- @-node:gcross.20101015124156.1547:@thin Blueprint.cabal
-- @-leo
